<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/birdImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bird"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"/>
    <TextView
        android:id="@+id/birdTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/birdImageView"
        android:layout_alignTop="@+id/birdImageView"
        android:layout_alignBottom="@+id/birdImageView"
        android:text="@string/bird_description"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        />
    <ImageView
        android:id="@+id/catImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cat"
        android:layout_below="@id/birdImageView"
        android:layout_marginBottom="50dp"/>
    <TextView
        android:id="@+id/catTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/catImageView"
        android:layout_below="@id/birdTextView"
        android:layout_alignTop="@id/catImageView"
        android:layout_alignBottom="@id/catImageView"
        android:text="@string/cat_description"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        />
    <ImageView
        android:id="@+id/dogImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dog"
        android:layout_below="@+id/catImageView"
        />
    <TextView
        android:id="@+id/dogTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/dogImageView"
        android:layout_below="@+id/catTextView"
        android:layout_alignTop="@+id/dogImageView"
        android:layout_alignBottom="@+id/dogImageView"
        android:text="@string/dog_description"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/rotateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rotate"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="50dp"
                />
            <Button
                android:id="@+id/flipButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/rotateButton"
                android:layout_alignTop="@id/rotateButton"
                android:text="@string/flip"/>

            <ImageView
                android:id="@+id/rightArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/right_arrow"
                android:layout_alignTop="@+id/flipButton"
                android:layout_alignParentEnd="true"
                />
            <ImageView
                android:id="@+id/resetController"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/center_focus"
                android:layout_toStartOf="@+id/rightArrow"
                android:layout_alignTop="@+id/rightArrow"
                />
            <ImageView
                android:id="@+id/topArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/top_arrow"
                android:layout_above="@+id/resetController"
                android:layout_toStartOf="@+id/rightArrow"
                />
            <ImageView
                android:id="@+id/leftArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/left_arrow"
                android:layout_toStartOf="@+id/resetController"
                android:layout_below="@+id/topArrow"
                />
            <ImageView
                android:id="@+id/downArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/down_arrow"
                android:layout_below="@+id/resetController"
                android:layout_toEndOf="@+id/leftArrow"
                />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>